Prevent word-wrapping in checkbox labels

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -15,6 +15,7 @@ img {
     border: 1px solid #CCC;
     label {
         margin: 0 1em;
+        white-space: nowrap;
     }
 }
 li.change {
